# libraries_frameworks

./: .gitignore  CMakeLists.txt  README.md  http_client.hpp  main_http.cpp  overload.cpp  x64_msvc.asm  x86_64_gcc.asm  x_86_64_clang.asm
.github/workflows/: cmake-multi-platform.yml
